fixing issue with animation resulting in x overflow on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,6 +172,9 @@
 body {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
+  min-height: 100vh;
+  min-width: 100vw;
   background: linear-gradient(0deg, rgba(231, 231, 231, 0.9), #030303);
 }
 @media screen and (max-width: 1080px) {
